--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-modal-datetime-picker",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "A react-native datetime-picker for Android and iOS",
   "main": "src/index.js",
   "scripts": {
@@ -21,7 +21,7 @@
   "license": "ISC",
   "dependencies": {
     "moment": "^2.15.0",
-    "react-native-animatable": "^0.6.1"
+    "react-native-animated-modal": "^1.0.1"
   },
   "devDependencies": {
     "babel-eslint": "^6.1.2",
