--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/index.js",
   "scripts": {
     "lint": "eslint src",
-    "test": "npm run lint"
+    "test": "npm run lint",
+    "reset": "watchman watch-del-all && rm -rf node_modules/ && npm cache clean && npm prune && yarn cache clean"
   },
   "keywords": [
     "react-native",
@@ -26,10 +27,9 @@
   "devDependencies": {
     "babel-eslint": "^6.1.2",
     "eslint": "^3.5.0",
-    "eslint-config-mostaza-react": "^1.11.2",
-    "eslint-plugin-import": "^1.15.0",
-    "eslint-plugin-jsx-a11y": "^2.2.2",
-    "eslint-plugin-react": "^6.2.1",
+    "eslint-plugin-prettier": "^2.0.0",
+    "eslint-plugin-react-app": "^1.0.2",
+    "prettier": "^0.18.0",
     "react": ">=15.0.0",
     "react-native": ">=0.24.0"
   }
