--- a/.eslintrc
+++ b/.eslintrc
@@ -4,7 +4,7 @@
   "rules": {
     "prettier/prettier": ["error", {
       "printWidth": 100,
-      "trailingComma": true, 
+      "trailingComma": "all", 
       "singleQuote": true
     }]
   }
