--- a/.npmignore
+++ b/.npmignore
@@ -2,48 +2,12 @@
 #
 .DS_Store
 
-# Xcode
-#
-build/
-*.pbxuser
-!default.pbxuser
-*.mode1v3
-!default.mode1v3
-*.mode2v3
-!default.mode2v3
-*.perspectivev3
-!default.perspectivev3
-xcuserdata
-*.xccheckout
-*.moved-aside
-DerivedData
-*.hmap
-*.ipa
-*.xcuserstate
-project.xcworkspace
-
-# Android/IJ
-#
-*.iml
-.idea
-.gradle
-local.properties
-
-# node.js
-#
+# Node.js
 node_modules/
 npm-debug.log
-
-# BUCK
-buck-out/
-\.buckd/
-android/app/libs
-android/keystores/debug.keystore
-
-.jsconfig
-.vscode
 
 # Images and extras
 extras/
 example/
-README.md
+.eslintrc
+yarn.lock
