--- a/example/package.json
+++ b/example/package.json
@@ -7,8 +7,8 @@
     "test": "jest"
   },
   "dependencies": {
-    "react": "15.3.2",
-    "react-native": "0.35.0",
+    "react": "16.0.0-alpha.6",
+    "react-native": "0.43.3",
     "react-native-modal-datetime-picker": "*"
   },
   "jest": {
