--- a/example/package.json
+++ b/example/package.json
@@ -1,24 +1,25 @@
 {
-  "name": "Example",
+  "name": "react-natvie-modal-datetime-picker-example",
   "version": "0.0.1",
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "test": "jest",
+    "reset": "watchman watch-del-all && rm -rf node_modules/ && npm cache clean && npm prune && yarn cache clean"
   },
   "dependencies": {
     "react": "16.0.0-alpha.6",
     "react-native": "0.43.3",
-    "react-native-modal-datetime-picker": "*"
+    "react-native-modal-datetime-picker": "file:../"
   },
   "jest": {
     "preset": "jest-react-native"
   },
-  "devDependencies": {
-    "babel-jest": "16.0.0",
-    "babel-preset-react-native": "1.9.0",
-    "jest": "16.0.1",
-    "jest-react-native": "16.0.0",
-    "react-test-renderer": "15.3.2"
+  "devDependencies": {    
+    "babel-jest": "^19.0.0",
+    "babel-preset-react-native": "^1.9.1",
+    "jest": "^19.0.2",
+    "jest-react-native": "^18.0.0",
+    "react-test-renderer": "^15.5.4"
   }
 }
