--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "typings": "src/index.d.ts",
   "scripts": {
     "lint": "eslint src",
+    "precommit": "lint-staged",
     "test": "npm run lint",
+    "prettier": "prettier --write --print-width 100 --single-quote --trailing-comma all src/**/*.js",
     "reset": "watchman watch-del-all && rm -rf node_modules/ && npm cache clean && npm prune && yarn cache clean"
   },
   "keywords": [
@@ -28,15 +30,23 @@
   },
   "dependencies": {
     "moment": "^2.18.1",
-    "react-native-modal": "^2.2.0"
+    "react-native-modal": "^2.4.0"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.2",
     "eslint": "^3.19.0",
-    "eslint-plugin-prettier": "^2.0.1",
     "eslint-plugin-react-app": "^1.0.2",
-    "prettier": "^1.1.0",
+    "husky": "0.13.3",
+    "lint-staged": "3.4.1",
+    "prettier": "^1.3.1",
     "react": ">=15.0.0",
     "react-native": ">=0.24.0"
+  },
+  "lint-staged": {
+    "*.js": [
+      "npm run test",
+      "npm run prettier",
+      "git add"
+    ]
   }
 }
