--- a/package.json
+++ b/package.json
@@ -31,15 +31,15 @@
   "dependencies": {
     "moment": "^2.18.1",
     "prop-types": "15.5.10",
-    "react-native-modal": "^2.5.0"
+    "react-native-modal": "3.1.0"
   },
   "devDependencies": {
-    "babel-eslint": "^7.2.2",
-    "eslint": "^3.19.0",
+    "babel-eslint": "7.2.3",
+    "eslint": "4.5.0",
     "eslint-plugin-react-app": "^1.0.2",
-    "husky": "0.13.3",
-    "lint-staged": "3.4.1",
-    "prettier": "^1.3.1",
+    "husky": "0.14.3",
+    "lint-staged": "4.0.4",
+    "prettier": "1.6.1",
     "react": ">=15.0.0",
     "react-native": ">=0.24.0"
   },
