--- a/example/package.json
+++ b/example/package.json
@@ -10,12 +10,12 @@
   "dependencies": {
     "react": "16.0.0-alpha.6",
     "react-native": "0.43.3",
-    "react-native-modal-datetime-picker": "file:../"
+    "react-native-modal-datetime-picker": "5.0.0-0"
   },
   "jest": {
     "preset": "jest-react-native"
   },
-  "devDependencies": {    
+  "devDependencies": {
     "babel-jest": "^19.0.0",
     "babel-preset-react-native": "^1.9.1",
     "jest": "^19.0.2",
