--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "precommit": "lint-staged",
     "test": "npm run lint",
     "prettier": "prettier --write all src/**/*.js",
-    "reset":
-      "watchman watch-del-all && rm -rf node_modules/ && npm cache clean && npm prune && yarn cache clean"
+    "reset": "watchman watch-del-all && rm -rf node_modules/ && npm cache clean && npm prune && yarn cache clean"
   },
   "keywords": [
     "react-native",
@@ -24,27 +23,30 @@
   ],
   "author": "Mazzarolo Matteo",
   "license": "ISC",
-  "homepage":
-    "https://github.com/mmazzarolo/react-native-modal-datetime-picker",
+  "homepage": "https://github.com/mmazzarolo/react-native-modal-datetime-picker",
   "repository": {
     "type": "git",
     "url": "https://github.com/mmazzarolo/react-native-modal-datetime-picker"
   },
   "dependencies": {
-    "prop-types": "^15.6.0",
-    "react-native-modal": "^5.1.1"
+    "prop-types": "^15.6.1",
+    "react-native-modal": "^5.4.0"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.2",
-    "eslint": "^4.18.1",
+    "eslint": "^4.19.1",
     "eslint-plugin-react-app": "^3.0.0",
     "husky": "0.14.3",
     "lint-staged": "^7.0.0",
-    "prettier": "^1.10.2",
+    "prettier": "^1.11.1",
     "react": ">=15.0.0",
     "react-native": ">=0.24.0"
   },
   "lint-staged": {
-    "*.js": ["npm run test", "npm run prettier", "git add"]
+    "*.js": [
+      "npm run test",
+      "npm run prettier",
+      "git add"
+    ]
   }
 }
