--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-modal-datetime-picker",
-  "version": "5.0.0-0",
+  "version": "5.0.0",
   "description": "A react-native datetime-picker for Android and iOS",
   "main": "src/index.js",
   "typings": "src/index.d.ts",
