--- a/example/.gitignore
+++ b/example/.gitignore
@@ -39,13 +39,6 @@ yarn-error.log
 # BUCK
 buck-out/
 \.buckd/
-<<<<<<< ours
-android/app/libs
-android/keystores/debug.keystore
-
-.jsconfig
-.vscode
-=======
 *.keystore
 
 # fastlane
@@ -53,9 +46,11 @@ android/keystores/debug.keystore
 # It is recommended to not store the screenshots in the git repo. Instead, use fastlane to re-generate the
 # screenshots whenever they are needed.
 # For more information about the recommended setup visit:
-# https://github.com/fastlane/fastlane/blob/master/fastlane/docs/Gitignore.md
+# https://docs.fastlane.tools/best-practices/source-control/
 
-fastlane/report.xml
-fastlane/Preview.html
-fastlane/screenshots
->>>>>>> theirs
+*/fastlane/report.xml
+*/fastlane/Preview.html
+*/fastlane/screenshots
+
+# Bundle artifact
+*.jsbundle
