--- a/example/package.json
+++ b/example/package.json
@@ -3,21 +3,20 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "start": "react-native start",
+    "postinstall": "rm -rf node_modules/react-native-permissions/{example,node_modules}",
+    "reinstall": "rm -rf node_modules ios/Pods && yarn install && cd ios && pod install"
   },
   "dependencies": {
-    "react": "16.8.3",
-    "react-native": "0.59.5",
-    "react-native-datetime-picker": "*"
+    "@react-native-community/datetimepicker": "^1.0.0",
+    "react": "16.8.6",
+    "react-native": "0.60.4",
+    "react-native-modal-datetime-picker": "file:../"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.3",
-    "@babel/runtime": "^7.4.3",
-    "babel-jest": "^24.7.1",
-    "jest": "^24.7.1",
-    "metro-react-native-babel-preset": "^0.53.1",
-    "react-test-renderer": "16.8.3"
+    "@babel/core": "^7.5.0",
+    "@babel/runtime": "^7.5.0",
+    "metro-react-native-babel-preset": "^0.54.1"
   },
   "jest": {
     "preset": "react-native"
