--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react-app": "^6.0.3",
     "prettier": "^1.16.4",
-    "semantic-release": "^15.13.3"
+    "semantic-release": "^16.0.0-beta.26"
   },
   "peerDependencies": {
     "@react-native-community/datetimepicker": ">=1.0.0"
