Added @next branch to circle-ci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,4 +60,6 @@ workflows:
             - tests
           filters:
             branches:
-              only: master
+              only: 
+                - master
+                - next
