feat: Moved to @react-native-community pickers
BREAKING CHANGE

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,4 +60,7 @@ workflows:
             - tests
           filters:
             branches:
-              only: master
+              only: 
+                - master
+                - next
+                - next-major
