--- a/package.json
+++ b/package.json
@@ -34,13 +34,13 @@
     "prop-types": "^15.7.2"
   },
   "devDependencies": {
-    "@semantic-release/git": "^7.0.8",
+    "@semantic-release/git": "^8.0.0",
     "eslint": "^6.5.1",
     "eslint-config-prettier": "^6.4.0",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react-app": "^6.0.3",
     "prettier": "^1.16.4",
-    "semantic-release": "^16.0.0-beta.26"
+    "semantic-release": "^16.0.2"
   },
   "peerDependencies": {
     "@react-native-community/datetimepicker": ">=1.0.0"
