--- a/package.json
+++ b/package.json
@@ -34,15 +34,36 @@
     "prop-types": "^15.7.2"
   },
   "devDependencies": {
-    "@semantic-release/git": "^7.0.8",
-    "eslint": "^6.5.1",
-    "eslint-config-prettier": "^6.4.0",
+    "@semantic-release/git": "^8.0.0",
+    "eslint": "^6.7.2",
+    "eslint-config-prettier": "^6.5.0",
     "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-react-app": "^6.0.3",
-    "prettier": "^1.16.4",
-    "semantic-release": "^16.0.0-beta.26"
+    "eslint-plugin-react-app": "^6.1.0",
+    "husky": "^4.0.10",
+    "lint-staged": "^9.5.0",
+    "prettier": "^1.19.1",
+    "semantic-release": "^16.0.2"
   },
   "peerDependencies": {
     "@react-native-community/datetimepicker": ">=1.0.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "git add"
+    ],
+    "*.json": [
+      "prettier --write",
+      "git add"
+    ],
+    "*.md": [
+      "prettier --write",
+      "git add"
+    ]
   }
 }
