--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "scripts": {
     "lint": "eslint src",
+    "lint:fix": "yarn lint --fix",
     "test": "yarn run lint",
     "release": "yarn semantic-release"
   },
@@ -38,7 +39,7 @@
     "eslint": "^6.7.2",
     "eslint-config-prettier": "^6.5.0",
     "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-react-app": "^6.1.0",
+    "eslint-plugin-react-app": "^6.2.1",
     "husky": "^4.0.10",
     "lint-staged": "^9.5.0",
     "prettier": "^1.19.1",
@@ -54,7 +55,7 @@
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
-      "eslint --fix",
+      "yarn lint:fix",
       "git add"
     ],
     "*.json": [
