--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "semantic-release": "^17.1.2"
   },
   "peerDependencies": {
-    "@react-native-community/datetimepicker": ">=3.0.0"
+    "@react-native-community/datetimepicker": ">=3.0.0",
+    "react-native": ">=0.65.0"
   },
   "husky": {
     "hooks": {
