--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   },
   "peerDependencies": {
     "@react-native-community/datetimepicker": ">=6.7.0",
+    "react": ">=17.0.0",
     "react-native": ">=0.65.0"
   },
   "husky": {
